# cpp-cmake-template

./: CMakeLists.txt  README.md  workspace.code-workspace
.github/workflows/: build.yml
scripts/: build.sh  clean.sh
